--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ts-node": "^8.8.2"
   },
   "devDependencies": {
+    "jest": "^25.3.0",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3"
   }
